--- a/homework_data_screenshots/hw1/block2MapRed/task3/main.ipynb
+++ b/homework_data_screenshots/hw1/block2MapRed/task3/main.ipynb
@@ -5100,7 +5100,7 @@
     "\n",
     "class Top_bigram(MRJob):\n",
     "    def mapper_1_init(self):\n",
-    "        self.stopwords = set(stopwords.words(\"english\")) # не работает на хадупе ни в какую...\n",
+    "        self.stopwords = set(stopwords.words(\"english\")) \n",
     "        self.stemmer = SnowballStemmer(\"english\")\n",
     "        self.tokenizer = word_tokenize\n",
     "        pass\n",
