Add error immitation

--- a/flink_data/main.ipynb
+++ b/flink_data/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,16 +964,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<subprocess.Popen at 0x7fa33463d8b0>"
+       "<subprocess.Popen at 0x7f46ae8442b0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -982,25 +982,52 @@
      "output_type": "stream",
      "text": [
       "Connecting to Kafka brokers\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=104, timestamp=1703450719999, timestamp_type=0, key=None, value=b'379.55708135962874', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=18, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=105, timestamp=1703450719999, timestamp_type=0, key=None, value=b'376.4598901764191', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=106, timestamp=1703450719999, timestamp_type=0, key=None, value=b'381.0303999545611', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=107, timestamp=1703450719999, timestamp_type=0, key=None, value=b'378.5754138868966', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=108, timestamp=1703450719999, timestamp_type=0, key=None, value=b'369.9197034474346', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=109, timestamp=1703450719999, timestamp_type=0, key=None, value=b'348.26161023617846', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=18, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=110, timestamp=1703450719999, timestamp_type=0, key=None, value=b'377.8301174224788', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=111, timestamp=1703450719999, timestamp_type=0, key=None, value=b'371.8062222467547', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=112, timestamp=1703450719999, timestamp_type=0, key=None, value=b'368.97471373508864', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=18, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedsliding', partition=0, offset=113, timestamp=1703450719999, timestamp_type=0, key=None, value=b'342.80301643796383', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=18, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=97, timestamp=1703450719999, timestamp_type=0, key=None, value=b'381.0303999545611', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=98, timestamp=1703450719999, timestamp_type=0, key=None, value=b'369.9197034474346', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=99, timestamp=1703450719999, timestamp_type=0, key=None, value=b'341.3020024726795', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=100, timestamp=1703450719999, timestamp_type=0, key=None, value=b'356.4703372985398', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=101, timestamp=1703450719999, timestamp_type=0, key=None, value=b'348.26161023617846', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=18, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=102, timestamp=1703450719999, timestamp_type=0, key=None, value=b'377.8441291573287', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=103, timestamp=1703450719999, timestamp_type=0, key=None, value=b'338.6914452679584', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=104, timestamp=1703450719999, timestamp_type=0, key=None, value=b'338.0964425615417', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n",
-      "ConsumerRecord(topic='bekusovmhw3processedtumbling', partition=0, offset=105, timestamp=1703450719999, timestamp_type=0, key=None, value=b'376.4598901764191', headers=[], checksum=None, serialized_key_size=-1, serialized_value_size=17, serialized_header_size=-1)\n"
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1296, timestamp=1703537511398, timestamp_type=0, key=b'6', value=b'{\"device_id\": 6, \"temperature\": 374.07643434983504, \"execution_time\": 700}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1297, timestamp=1703537512149, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 336.33278088768424, \"execution_time\": 705}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1298, timestamp=1703537512900, timestamp_type=0, key=b'4', value=b'{\"device_id\": 4, \"temperature\": 339.57077638644466, \"execution_time\": 710}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1299, timestamp=1703537513652, timestamp_type=0, key=b'5', value=b'{\"device_id\": 5, \"temperature\": 345.3130952369819, \"execution_time\": 715}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1300, timestamp=1703537514403, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 346.98407743423115, \"execution_time\": 720}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1301, timestamp=1703537515154, timestamp_type=0, key=b'2', value=b'{\"device_id\": 2, \"temperature\": 377.06260786997467, \"execution_time\": 725}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1302, timestamp=1703537515905, timestamp_type=0, key=b'2', value=b'{\"device_id\": 2, \"temperature\": 339.1132432497142, \"execution_time\": 730}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1303, timestamp=1703537516657, timestamp_type=0, key=b'8', value=b'{\"device_id\": 8, \"temperature\": 343.47996506759625, \"execution_time\": 735}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "retry\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1304, timestamp=1703537517408, timestamp_type=0, key=b'2', value=b'{\"device_id\": 2, \"temperature\": 376.74296631201753, \"execution_time\": 740}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1305, timestamp=1703537518159, timestamp_type=0, key=b'8', value=b'{\"device_id\": 8, \"temperature\": 363.8388051166551, \"execution_time\": 745}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1306, timestamp=1703537518911, timestamp_type=0, key=b'9', value=b'{\"device_id\": 9, \"temperature\": 378.93518884700677, \"execution_time\": 750}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1307, timestamp=1703537519662, timestamp_type=0, key=b'4', value=b'{\"device_id\": 4, \"temperature\": 340.8753195985898, \"execution_time\": 755}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1308, timestamp=1703537520413, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 374.9760437506324, \"execution_time\": 760}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1309, timestamp=1703537521164, timestamp_type=0, key=b'4', value=b'{\"device_id\": 4, \"temperature\": 378.37206137991916, \"execution_time\": 765}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1310, timestamp=1703537521916, timestamp_type=0, key=b'8', value=b'{\"device_id\": 8, \"temperature\": 362.478648888526, \"execution_time\": 770}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=72, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1311, timestamp=1703537522667, timestamp_type=0, key=b'10', value=b'{\"device_id\": 10, \"temperature\": 341.2751585820734, \"execution_time\": 775}', headers=[], checksum=None, serialized_key_size=2, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1312, timestamp=1703537523418, timestamp_type=0, key=b'9', value=b'{\"device_id\": 9, \"temperature\": 351.9925432114753, \"execution_time\": 780}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1313, timestamp=1703537524169, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 361.4639117549201, \"execution_time\": 785}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1314, timestamp=1703537524920, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 336.19787174366877, \"execution_time\": 790}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1315, timestamp=1703537525672, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 370.66851388712854, \"execution_time\": 795}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1316, timestamp=1703537526423, timestamp_type=0, key=b'2', value=b'{\"device_id\": 2, \"temperature\": 336.45891267833093, \"execution_time\": 800}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1317, timestamp=1703537527174, timestamp_type=0, key=b'1', value=b'{\"device_id\": 1, \"temperature\": 366.6783072274894, \"execution_time\": 805}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1318, timestamp=1703537527926, timestamp_type=0, key=b'2', value=b'{\"device_id\": 2, \"temperature\": 378.2375633285445, \"execution_time\": 810}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1319, timestamp=1703537528677, timestamp_type=0, key=b'9', value=b'{\"device_id\": 9, \"temperature\": 337.06354229665544, \"execution_time\": 815}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=74, serialized_header_size=-1)\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1320, timestamp=1703537529428, timestamp_type=0, key=b'10', value=b'{\"device_id\": 10, \"temperature\": 374.758046814313, \"execution_time\": 820}', headers=[], checksum=None, serialized_key_size=2, serialized_value_size=73, serialized_header_size=-1)\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1321, timestamp=1703537530180, timestamp_type=0, key=b'10', value=b'{\"device_id\": 10, \"temperature\": 363.03625000564455, \"execution_time\": 825}', headers=[], checksum=None, serialized_key_size=2, serialized_value_size=75, serialized_header_size=-1)\n",
+      "retry\n",
+      "retry\n",
+      "ConsumerRecord(topic='bekusovmhw3', partition=0, offset=1322, timestamp=1703537530931, timestamp_type=0, key=b'7', value=b'{\"device_id\": 7, \"temperature\": 367.9047252052645, \"execution_time\": 830}', headers=[], checksum=None, serialized_key_size=1, serialized_value_size=73, serialized_header_size=-1)\n",
+      "retry\n"
      ]
     }
    ],
@@ -1010,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1019,6 +1046,7 @@
      "text": [
       "from kafka import KafkaConsumer\n",
       "import time\n",
+      "import random\n",
       "\n",
       "\n",
       "def backoff(tries, sleep):\n",
@@ -1036,15 +1064,18 @@
       "    return decorator\n",
       "\n",
       "\n",
-      "@backoff(tries=10, sleep=60)\n",
+      "@backoff(tries=10, sleep=7)\n",
       "def message_handler(value):\n",
+      "    if random.random()<0.5:\n",
+      "        print(\"retry\")\n",
+      "        raise Exception\n",
       "    print(value)\n",
       "\n",
       "\n",
       "def create_consumer():\n",
       "    print(\"Connecting to Kafka brokers\")\n",
       "    consumer = KafkaConsumer(\n",
-      "        \"bekusovmhw3processedtubling\",\n",
+      "        \"bekusovmhw3\",\n",
       "        group_id=\"itmo_group1\",\n",
       "        bootstrap_servers=\"localhost:29092\",\n",
       "        auto_offset_reset=\"earliest\",\n",
